--- a/package.json
+++ b/package.json
@@ -9,9 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.2.1",
+    "bootstrap": "^5.1.3",
+    "express": "^4.18.1",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-bootstrap": "^2.4.0",
+    "react-compare-slider": "^2.2.0",
+    "react-dom": "18.2.0",
+    "react-elastic-carousel": "^0.11.5",
+    "react-icons": "^4.4.0",
+    "react-responsive-masonry": "^2.1.4",
+    "sass": "^1.53.0",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "eslint": "8.18.0",
