--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "postbuild": "next-sitemap --config next-sitemap.config",
     "start": "next start",
     "lint": "next lint"
   },
@@ -13,6 +14,7 @@
     "bootstrap": "^5.1.3",
     "express": "^4.18.1",
     "next": "12.2.0",
+    "next-sitemap": "^3.1.7",
     "react": "18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-compare-slider": "^2.2.0",
