--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "next-sitemap --config next-sitemap.config",
-    "start": "next start",
+    "postbuild": "next-sitemap --config next-sitemap.config.js",
+    "start": "next start", 
     "lint": "next lint"
   },
   "dependencies": {
